// Vitest Snapshot v1

exports[`create group post reply > should not create on non-existing topic 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "topic 3716000 not found",
  "statusCode": 404,
}
`;

exports[`create group post reply > should not create on non-existing topic reply 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "parent post id 11 not found",
  "statusCode": 404,
}
`;

exports[`group topics > should failed on not found group 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "group not found",
  "statusCode": 404,
}
`;

exports[`group topics > should fetch topic details 1`] = `
Object {
  "createdAt": 1657885648,
  "creator": Object {
    "avatar": Object {
      "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
      "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
      "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
    },
    "id": 287622,
    "nickname": "nickname 287622",
    "sign": "sing 287622",
    "user_group": 0,
    "username": "287622",
  },
  "group": Object {
    "createdAt": 1531631310,
    "description": "[s]非[/s]官方沙盒",
    "icon": "https://lain.bgm.tv/pic/icon/s/000/00/42/4215.jpg?r=1531631345",
    "id": 4215,
    "name": "sandbox",
    "nsfw": false,
    "title": "沙盒",
    "totalMembers": 3,
  },
  "id": 371602,
  "replies": Array [
    Object {
      "createdAt": 1658030918,
      "creator": Object {
        "avatar": Object {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 287622,
        "nickname": "nickname 287622",
        "sign": "sing 287622",
        "user_group": 0,
        "username": "287622",
      },
      "id": 2056216,
      "isFriend": false,
      "replies": Array [],
      "state": 6,
      "text": "",
    },
    Object {
      "createdAt": 1662276469,
      "creator": Object {
        "avatar": Object {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 287622,
        "nickname": "nickname 287622",
        "sign": "sing 287622",
        "user_group": 0,
        "username": "287622",
      },
      "id": 2092004,
      "isFriend": false,
      "replies": Array [],
      "state": 7,
      "text": "",
    },
    Object {
      "createdAt": 1662282514,
      "creator": Object {
        "avatar": Object {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 1,
        "nickname": "nickname 1",
        "sign": "sing 1",
        "user_group": 0,
        "username": "1",
      },
      "id": 2092065,
      "isFriend": false,
      "replies": Array [],
      "state": 5,
      "text": "",
    },
    Object {
      "createdAt": 1662282518,
      "creator": Object {
        "avatar": Object {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 1,
        "nickname": "nickname 1",
        "sign": "sing 1",
        "user_group": 0,
        "username": "1",
      },
      "id": 2092066,
      "isFriend": false,
      "replies": Array [],
      "state": 1,
      "text": "",
    },
    Object {
      "createdAt": 1662282523,
      "creator": Object {
        "avatar": Object {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 1,
        "nickname": "nickname 1",
        "sign": "sing 1",
        "user_group": 0,
        "username": "1",
      },
      "id": 2092067,
      "isFriend": false,
      "replies": Array [],
      "state": 2,
      "text": "",
    },
    Object {
      "createdAt": 1662282554,
      "creator": Object {
        "avatar": Object {
          "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
          "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
          "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
        },
        "id": 287622,
        "nickname": "nickname 287622",
        "sign": "sing 287622",
        "user_group": 0,
        "username": "287622",
      },
      "id": 2092069,
      "isFriend": false,
      "replies": Array [
        Object {
          "createdAt": 1662283112,
          "creator": Object {
            "avatar": Object {
              "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
              "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
              "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
            },
            "id": 287622,
            "nickname": "nickname 287622",
            "sign": "sing 287622",
            "user_group": 0,
            "username": "287622",
          },
          "id": 2092074,
          "isFriend": false,
          "state": 0,
          "text": "sub",
        },
      ],
      "state": 0,
      "text": "q",
    },
  ],
  "state": 2,
  "text": "tt",
  "title": "tes",
}
`;
